Fix: Image not showing up

--- a/css/home/style.css
+++ b/css/home/style.css
@@ -29,7 +29,7 @@
 }
 
 #bx2{
-    background: url(../../Assets/QRR.png) no-repeat center;
+    background: url(../../assets/QRR.png) no-repeat center;
     background-size: 250px;
 }
 
